fix: 🐛 Java 24 warnings